--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #/**********************************************************************
 #************** Author:   Christian KEMGANG NGUESSOP *******************
-#************** Project:   shophair                  *******************
+#************** Project:   datamart                  *******************
 #************** Version:  1.0.0                      *******************
 #***********************************************************************/
 
